update and rename form.html to home.html

--- a/src/main/resources/templates/fragments/home.html
+++ b/src/main/resources/templates/fragments/home.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="container" style="padding-top: 20vh; display: flex; flex-direction: column; align-items: center;">
-    <h1 class="display-3">CBO management made easy.</h1>
+    <h1 class="display-3">CBO Data Management made easy.</h1>
     <a href="/administrative" class="btn btn-success btn-lg my-2">Log In</a>
   </div>
 </div>
